hphp/test/quick/strict_types_no_scalar.hhas.expectf
Fatal error: Assembler Error: line 3: Cannot set .strict without PHP7 ScalarTypes in %s on line -1
